# jim

./: .gitignore  README.md
.github/workflows/: pages.yml  wasm.yml
compiler/: Cargo.toml
compiler/runtime/: jim_runtime.c
compiler/src/: ast.rs  codegen.rs  driver.rs  errors.rs  lexer.rs  lib.rs  loader.rs  main.rs  opt.rs  parser.rs  sema.rs  token.rs
compiler/tests/: compile_to_c.rs
docs/: DESIGN.md  EXAMPLES.md  README.md  jim.txt
editors/vscode-jim/: README.md  extension.js  jim-analysis.js  language-configuration.json  package.json
editors/vscode-jim/syntaxes/: jim.tmLanguage.json
editors/vscode-jim/themes/: jim-monokai-color-theme.json
playground/wasm/: Cargo.toml
playground/wasm/src/: lib.rs
site/: book.toml
site/src/: SUMMARY.md  examples.md  getting-started.md  introduction.md  language-tour.md  playground.md
site/src/playground/: app.js  index.html  style.css
site/src/spike/: index.html  spike.c  spike_run.c
site/theme/: highlight.css  jim-highlight.js
std/: core.j  io.j  math.j
std/core/: array.j  bool.j  char.j  exception.j  float.j  generic.j  integer.j  string.j  vector.j
tests/: hello.j  m10_smoke.j  m2_smoke.j  m4_smoke.j  m5_argv.j  m5_smoke.j  m6_smoke.j  m7_smoke.j  m8_smoke.j
tests/fake_std/: core.j  io.j
