[package]
name = "jim-playground"
version = "0.1.0"
edition = "2021"
description = "WebAssembly wrapper exposing jimc's in-memory compile to the browser playground"

[lib]
# cdylib -> the .wasm module; rlib -> usable from native tests if needed.
crate-type = ["cdylib", "rlib"]

[dependencies]
# The compiler itself stays zero-dependency; only this thin browser wrapper
# pulls in wasm-bindgen for the JS boundary.
jimc = { path = "../../compiler" }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"   # small wasm; the compiler isn't hot-path here
lto = true
